`/realm/bg` endpoint for BG keeps status
