# GameServer/API/docs/swagger.yaml
@@ -7,11 +7,11 @@ info:
     Use this documentation to navigate the available Atlas APIs
     <br>
     <h2>Recent Changes</h2>
+    <h3>0.2.0</h3>
+    Added `/realm/bg` endpoint<br>
     <h3>0.1.9</h3>
     Added `/relic` endpoint<br>
-    <h3>0.1.8</h3>
-    Added `Level` and `UnderSiege` to `keep` schema<br>
-  version: 0.1.9
+  version: 0.2.0
   title: AtlasAPI
   termsOfService: https://www.atlasfreeshard.com
   license:
@@ -21,11 +21,13 @@ tags:
   - name: stats
     description: Everything about server statistics
   - name: guild
-    description: Everything about Guilds
+    description: Everything about guilds
   - name: player
-    description: Everything about Players
+    description: Everything about players
   - name: realm
-    description: Everything about RvR
+    description: Everything about keeps
+  - name: relic
+    description: Everything about relics
 paths:
   /stats:
     get:
@@ -225,6 +227,22 @@ paths:
                 $ref: '#/components/schemas/df'
         '404':
           description: Not found
+  /realm/bg:
+    get:
+      tags:
+        - realm
+      summary: /realm/bg
+      description: Returns the status of battle ground keeps <br><br>[cache 1 min]
+      operationId: getBGStatus
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/bgkeeps'
+        '404':
+          description: Not found
   /relic:
     get:
       tags:
@@ -370,7 +388,7 @@ components:
         currentRealm:
           type: string
           example: Albion
-          enum: [Albion, Midgard, Hibernia]
+          enum: [Albion, Midgard, Hibernia, None]
         claimingGuild:
           type: string
           example: Cotswold Clan
@@ -380,6 +398,21 @@ components:
         underSiege:
           type: integer
           example: 0
+          enum: [0, 1]
+    bgkeep:
+      type: object
+      properties:
+        Name:
+          type: string
+          example: Thidranki Faste
+        currentRealm:
+          type: string
+          example: Albion
+          enum: [Albion, Midgard, Hibernia, None]
+        underSiege:
+          type: integer
+          example: 0
+          enum: [0, 1]
     relic:
       type: object
       properties:
@@ -404,6 +437,10 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/keep'
+    bgkeeps:
+      type: array
+      items:
+        $ref: '#/components/schemas/bgkeep'
     serverUptime:
       type: object
       properties:
